Add DB var connexion

--- a/.env
+++ b/.env
@@ -2,5 +2,8 @@
 # 🚨 erreurs de conception, mauvaises pratiques de développement logiciel, failles de sécurité et de performance.
 # 🚨 Ce code servira de support à un exercice de refactoring.
 DB_HOST=db
+DB_USER=rps
+DB_PASSWORD=azerty
+DB_NAME=rps
 
 JWT_KEY=MIIEvgIBADANBgkqhkiG9w0BAQEFAA
