--- a/.env
+++ b/.env
@@ -1,9 +1,10 @@
 # 🚨 Attention, le code présent dans ce fichier contient volontairement de nombreuses imperfections :
 # 🚨 erreurs de conception, mauvaises pratiques de développement logiciel, failles de sécurité et de performance.
 # 🚨 Ce code servira de support à un exercice de refactoring.
-DB_HOST=db
-DB_USER=rps
-DB_PASSWORD=azerty
-DB_NAME=rps
+
+MARIADB_ROOT_PASSWORD=azerty
+MARIADB_USER=rps
+MARIADB_DATABASE=rps
+MARIADB_PASSWORD=azerty
 
 JWT_KEY=MIIEvgIBADANBgkqhkiG9w0BAQEFAA
